# agent-eval-harness

./: README.md  SPEC.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent_eval/: __init__.py  loader.py  reporter.py  runner.py  scorer.py
scenarios/: greet.yaml  math.yaml
tests/: test_loader.py  test_reporter.py  test_runner.py  test_scorer.py
